# worktrunk-sync

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  Cargo.toml  README.md  test-sync-e2e.sh
.github/workflows/: ci.yaml  release.yaml
src/: main.rs  sync.rs
tests/: prune.rs
